--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^7.4.0",
     "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.4",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
