--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
+    "socket.io-client": "^4.8.1",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
