--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/sockjs-client": "^1.5.4",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.8.1",
     "sockjs": "^0.3.24",
